feat(P19): Qdrant 语义检索接入（保持 retrieve_evidence 契约不变）
## 基础设施

### docker-compose.dev.yml
- 新增 Qdrant 服务 (qdrant/qdrant:v1.7.4)
- 端口: 6333 (HTTP), 6334 (gRPC)
- 数据卷: qdrant_dev_data
- core-backend 依赖 Qdrant 健康检查

## core-backend

### 新增检索模块 (app/retrieval/)
- base.py: RetrievalStrategy, RetrievalResult, RetrievalProvider 抽象
- qdrant_client.py: QdrantRetriever 实现
  - 向量语义检索
  - Collection 管理
  - 向量 upsert/delete
  - 支持 OpenAI/Baidu embedding
- hybrid.py: HybridRetriever 混合检索
  - 并行执行 trgm + qdrant
  - 加权融合排序 (trgm: 0.4, qdrant: 0.6)
  - 去重合并

### retrieve_evidence 多策略支持
- strategy 参数: trgm / qdrant / hybrid
- 返回 trgm_score, qdrant_score 分数明细
- 向后兼容 use_trgm 参数

### 配置扩展 (app/core/config.py)
- QDRANT_URL, QDRANT_COLLECTION, QDRANT_ENABLED
- RETRIEVAL_STRATEGY, RETRIEVAL_TRGM_WEIGHT, RETRIEVAL_QDRANT_WEIGHT
- OPENAI_API_KEY, BAIDU_API_KEY, BAIDU_SECRET_KEY

## worker

### 向量化任务扩展 (app/tasks/vectorize.py)
- vectorize_evidence: 单条证据向量化
- delete_evidence_vector: 删除证据向量
- vectorize_content: 内容分块向量化
- sync_all_evidences: 全量同步
- 支持 OpenAI/Baidu embedding 提供者

## 对比脚本

### scripts/compare_retrieval.py
- 对比 trgm vs qdrant vs hybrid 命中情况
- 计算重叠率、平均分数等指标
- 支持单查询和批量查询
- JSON 输出

## 审计

retrieve_evidence 返回结果包含:
- strategy: 使用的检索策略
- trgm_score: pg_trgm 分数
- qdrant_score: Qdrant 向量分数
- score_distribution: 分数分布统计

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,6 +41,22 @@ services:
       timeout: 3s
       retries: 5
 
+  qdrant:
+    image: qdrant/qdrant:v1.7.4
+    container_name: yantian-qdrant-dev
+    ports:
+      - "${QDRANT_PORT:-6333}:6333"
+      - "${QDRANT_GRPC_PORT:-6334}:6334"
+    volumes:
+      - qdrant_dev_data:/qdrant/storage
+    environment:
+      - QDRANT__SERVICE__GRPC_PORT=6334
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   # -----------------
   # 应用服务
   # -----------------
@@ -61,10 +77,14 @@ services:
       - DEBUG=true
       - DATABASE_URL=postgresql://${POSTGRES_USER:-yantian}:${POSTGRES_PASSWORD:-yantian_dev_password}@postgres:5432/${POSTGRES_DB:-yantian}
       - REDIS_URL=redis://redis:6379/0
+      - QDRANT_URL=http://qdrant:6333
+      - QDRANT_COLLECTION=${QDRANT_COLLECTION:-yantian_evidence}
     depends_on:
       postgres:
         condition: service_healthy
       redis:
+        condition: service_healthy
+      qdrant:
         condition: service_healthy
     command: >
       sh -c "
@@ -126,6 +146,8 @@ volumes:
   postgres_dev_data:
     driver: local
   redis_dev_data:
+    driver: local
+  qdrant_dev_data:
     driver: local
 
 # -----------------
