fix: Docker build and project base code issues
- Fix Dockerfile to include README.md for hatchling build
- Fix docker-compose DATABASE_URL to use asyncpg driver
- Add pyproject.toml hatch build config for wheel packages
- Add pydantic[email] dependency
- Rename reserved 'metadata' attributes in domain models:
  - POI.metadata -> POI.poi_metadata
  - KnowledgeEntry.metadata -> KnowledgeEntry.entry_metadata
  - ToolCallLog.metadata -> ToolCallLog.call_metadata
- Add missing oauth2_scheme to security.py
- Add missing timedelta import to experiments.py
- Add database/session.py compatibility layer
- Add database/mixins.py with generate_prefixed_uuid
- Add alembic merge migration for p28_alerts
- Fix p27 migration with conditional column/index creation
- Add SQL script for manual table creation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     environment:
       - ENV=development
       - DEBUG=true
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-yantian}:${POSTGRES_PASSWORD:-yantian_dev_password}@postgres:5432/${POSTGRES_DB:-yantian}
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-yantian}:${POSTGRES_PASSWORD:-yantian_dev_password}@postgres:5432/${POSTGRES_DB:-yantian}
       - REDIS_URL=redis://redis:6379/0
       - QDRANT_HOST=qdrant
       - QDRANT_PORT=6333
@@ -129,7 +129,7 @@ services:
       - ./data:/data
     environment:
       - ENV=development
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-yantian}:${POSTGRES_PASSWORD:-yantian_dev_password}@postgres:5432/${POSTGRES_DB:-yantian}
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-yantian}:${POSTGRES_PASSWORD:-yantian_dev_password}@postgres:5432/${POSTGRES_DB:-yantian}
       - CELERY_BROKER_URL=redis://redis:6379/1
       - CELERY_RESULT_BACKEND=redis://redis:6379/2
       - QDRANT_HOST=qdrant
