--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# Python lib directories (but not src/lib in frontend apps)
+# lib/
 lib64/
 parts/
 sdist/
