--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,31 @@ services:
       - ai-orchestrator
     command: npm run dev
 
+  visitor-h5:
+    build:
+      context: ./apps/visitor-h5
+      dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_AI_ORCH_URL=http://ai-orchestrator:8001
+        - NEXT_PUBLIC_CORE_BACKEND_URL=http://core-backend:8000
+        - NEXT_PUBLIC_TENANT_ID=${TENANT_ID:-yantian}
+        - NEXT_PUBLIC_SITE_ID=${SITE_ID:-yantian-main}
+    container_name: yantian-visitor-h5
+    restart: unless-stopped
+    ports:
+      - "${VISITOR_H5_PORT:-3001}:3000"
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - core-backend
+      - ai-orchestrator
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   # -----------------
   # 可选服务（Phase 2）
   # -----------------
