--- a/apps/visitor-h5/package.json
+++ b/apps/visitor-h5/package.json
@@ -11,21 +11,23 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.312.0",
     "next": "^14.1.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "lucide-react": "^0.312.0",
-    "clsx": "^2.1.0"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.19.27",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.3.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0"
+    "eslint-config-next": "^14.1.0",
+    "playwright": "^1.57.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.0"
   }
 }
