--- a/services/core-backend/pyproject.toml
+++ b/services/core-backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "orjson>=3.9.0",
     "structlog>=24.1.0",
     "python-dotenv>=1.0.0",
+    "qdrant-client>=1.7.0",
 ]
 
 [project.optional-dependencies]
