--- a/services/core-backend/pyproject.toml
+++ b/services/core-backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "structlog>=24.1.0",
     "python-dotenv>=1.0.0",
     "qdrant-client>=1.7.0",
+    "prometheus-client>=0.19.0",
 ]
 
 [project.optional-dependencies]
